@startuml
title Strong Type Classes

abstract class AbstractTypeFactory

abstract class TypeFactory

abstract class RationalTypeFactory

abstract class ComplexTypeFactory

interface ComplexTypeInterface

interface GMPInterface

interface NumericTypeInterface

interface RationalTypeInterface

interface TypeInterface

abstract class AbstractType

abstract class AbstractMultiValueType

abstract class AbstractRationalType

abstract class AbstractComplexType

class BoolType

class StringType

class IntType

class NaturalIntType

class WholeIntType

class FloatType

class DigitType

class GMPIntType

class RationalType

class GMPRationalType

class ComplexType

class GMPComplexType

AbstractTypeFactory <-- TypeFactory
AbstractTypeFactory <-- RationalTypeFactory
AbstractTypeFactory <-- ComplexTypeFactory
RationalTypeFactory <.. TypeFactory
ComplexTypeFactory <.. TypeFactory

TypeInterface <-- AbstractType
TypeInterface <-- ComplexTypeInterface
TypeInterface <-- RationalTypeInterface
AbstractType <-- AbstractMultiValueType
AbstractType <-- BoolType
AbstractType <-- StringType
AbstractType <-- DigitType
AbstractType <-- IntType
NumericTypeInterface <-- IntType
IntType <-- NaturalIntType
IntType <-- WholeIntType
IntType <-- GMPIntType
AbstractType <-- FloatType
NumericTypeInterface <-- FloatType
GMPInterface <-- GMPIntType
RationalTypeInterface <-- AbstractRationalType
NumericTypeInterface <-- AbstractRationalType
AbstractMultiValueType <-- AbstractRationalType
AbstractRationalType <-- RationalType
AbstractRationalType <-- GMPRationalType
GMPInterface <-- GMPRationalType
AbstractMultiValueType <-- AbstractComplexType
ComplexTypeInterface <-- AbstractComplexType
NumericTypeInterface <-- AbstractComplexType
AbstractComplexType <-- ComplexType
AbstractComplexType <-- GMPComplexType
GMPInterface <-- GMPComplexType
@enduml